--- a/todomvc.css
+++ b/todomvc.css
@@ -1,7 +1,8 @@
 [mol_app_todomvc] {
 	align-self: stretch;
 	width: 100%;
-	height: 100%;
+	background: #f5f5f5;
+	margin: 0;
 }
 
 [mol_app_todomvc] [mol_stringer] ,
