--- a/todomvc.css
+++ b/todomvc.css
@@ -1,7 +1,7 @@
 [mol_app_todomvc] {
 	align-self: stretch;
 	width: 100%;
-	background: #f5f5f5;
+	background-color: #f5f5f5;
 	margin: 0;
 }
 
@@ -53,7 +53,7 @@
 [mol_app_todomvc_panel] {
 	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
 	max-width: 38rem;
-	background: white;
+	background-color: white;
 	display: flex;
 	flex-direction: column;
 	margin: 0 auto 2rem;
@@ -79,7 +79,7 @@
 
 [mol_app_todomvc_task_row] {
 	display: flex;
-	background: white;
+	background-color: white;
 	box-shadow: 0 -1px 0 0 #ededed;
 	height: 4rem;
 }
