Fixed large demo height (#188)
* Final change source button

* Change demo tree

* Change source button

i believe in the end

* Change demo tree

* Finishe line

* Del padding-left

* del tab

* add new line

* Del Readme from master

* Add search line and change nav_menu

* Change button

* Change searche

* Add style padding for searche

* Rechange searche

* Revert "Del Readme from master"

This reverts commit 77ab061c5c8fc41f09ed286d30a6f06ba08e9622.

* Correct files

* Rechange searce #2

* Change wrap

* Delete zavisimosti v css

* Wrote change for searche

* Add padding in search

* Change demo tree

* Change search2

* Change3

* Add change to search

* Add icon

* Add next to menu

* Del words

* add class css

* del words

* add space

* Change name icons to chevron

* Change demo css

* Change demo css

* Change padding

* Change name

* Change size box

--- a/todomvc.css
+++ b/todomvc.css
@@ -50,6 +50,10 @@
 	font-size: 1.5rem;
 }
 
+[mol_app_todomvc_page] {
+	flex: 1 1 auto;
+}
+
 [mol_app_todomvc_panel] {
 	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
 	max-width: 38rem;
