--- a/todomvc.css
+++ b/todomvc.css
@@ -1,7 +1,6 @@
 [mol_app_todomvc] {
 	align-self: stretch;
 	width: 100%;
-	background-color: #f5f5f5;
 	margin: 0;
 	transition: none;
 }
@@ -61,7 +60,9 @@
 [mol_app_todomvc_panel] {
 	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
 	max-width: 38rem;
-	background-color: white;
+	--mol_theme_back: white;
+	--mol_theme_text: black;
+	background-color: var(--mol_theme_back);
 	display: flex;
 	flex-direction: column;
 	margin: 0 auto 2rem;
@@ -82,7 +83,7 @@
 	font-size: 7rem;
 	font-weight: 100;
 	text-align: center;
-	color: rgba(175, 47, 47, 0.15);
+	color: rgba(275, 147, 147, 0.2);
 	text-rendering: optimizeLegibility;
 	text-transform: lowercase;
 }
