--- a/todomvc.css
+++ b/todomvc.css
@@ -118,6 +118,7 @@
 [hyoo_todomvc_task_row_drop] {
 	font-size: 1.25rem;
 	flex:  0 04rem;
+	padding: 1.25rem;
 }
 [hyoo_todomvc_task_row]:not(:hover) [hyoo_todomvc_task_row_drop]:not(:focus) {
 	opacity: 0;
